# Scripter

./: .gitignore  CMakeLists.txt  run.bat  test.py
client/: spec.txt  test.html
client/appSocket/: Socket.py  package-lock.json  package.json
client/appSocket/src/: App.css  App.jsx  index.css
client/appSocket/src/components/: ComPortSelector.css  ComPortSelector.jsx  Display.jsx  IPPortInput.css  IPPortInput.jsx  PopupWindow.css  PopupWindow.jsx  UpperInput.css  UpperInput.jsx  WebSocketContext.jsx
client/appSocket/src/components/ArduinoEmulator/: ArduinoEmulator.css  ArduinoEmulator.jsx
client/appSocket/src/components/BaudRate/: BaudSelector.css  BaudSelector.jsx
client/appSocket/src/components/Boards/: BoardSelector.css  BoardSelector.jsx
client/appSocket/src/components/COMport/: ComPortSelector.css  ComPortSelector.jsx
client/appSocket/src/components/CodeUploader/: CodeUploader.css
client/appSocket/src/components/Context/: ConfigureContext.jsx
client/appSocket/src/components/Editor/: Button.css  CodeEditor.css  CodeEditor.jsx
frontend/appSocket/: package-lock.json
frontend/appSocket/src/: App.jsx
frontend/appSocket/src/components/: Button.css  Button.jsx  CodeEditor.css  CodeEditor.jsx  IPPortInput.jsx  WebSocketContext.jsx
include/: application.h  common.h  exec.h  file_handler.h  imguiInit.h  request.h  windowHandler.h  ws_server.h
src/: application.cpp  exec.cpp  file_handler.cpp  imguiInit.cpp  request.cpp  windowHandler.cpp  ws_server.cpp
sys/: scripter.reg
test/: main.cpp  temp.cpp
(+13 files in other folders)
